Actions
Bug #10106
closedlibreparse needs smatch fixes
Start date:
2018-12-19
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
needs-triage
Gerrit CR:
Description
Cast a function to void.
Updated by Electric Monk about 3 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit bcb78a453dcc6eaa7c33432fac3626514e243154
commit bcb78a453dcc6eaa7c33432fac3626514e243154 Author: John Levon <john.levon@joyent.com> Date: 2019-03-28T04:48:40.000Z 10106 libreparse needs smatch fixes Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Gergő Doma <domag02@gmail.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions